ensure same spacing as linked accounts header

--- a/src/components/BankTransactions/bankTransactionsHeader.scss
+++ b/src/components/BankTransactions/bankTransactionsHeader.scss
@@ -7,8 +7,6 @@
   gap: var(--spacing-xs);
   align-items: stretch;
   width: 100%;
-  padding-block-start: var(--spacing-md);
-  padding-inline: var(--spacing-md);
 }
 
 .Layer__bank-transactions__header__content {
